# workflow-learning-agents

./: .env.example  .gitignore  README.md  pyproject.toml
demo2skill/: __init__.py
demo2skill/examples/github_issue/: create_github_issue_v1.repaired.yaml  induced_workflow.yaml  page_match.html  page_shifted.html  screen_states.json  test_inputs.json  video_events.json
demo2skill/executor/: __init__.py  cli.py  executor.py  grounding.py  models.py  page.py  repair.py  verify.py
demo2skill/export/: __init__.py  cli.py  trajectory.py
demo2skill/induction/: __init__.py  llm.py  prompts.py  segmenter.py  variable_abstraction.py  workflow_generator.py
demo2skill/recorder/: __init__.py  dom_snapshotter.py  event_logger.py  playwright_recorder.py  screenshot_store.py
demo2skill/trace/: __init__.py  normalize.py  schema.py
demo2skill/video/: __init__.py  schema.py
demo2skill/video/statediff/: __init__.py  cli.py  cursor.py  cursor_detect.py  field_text.py  graph.py  inverse_dynamics.py  matching.py  stability.py  state.py
demo2skill/video/statediff/parser/: __init__.py  base.py  clients.py  ocr.py  prompts.py  screenvlm.py  vlm.py
demo2skill/video/video2action/: __init__.py  frames.py  idm.py  pipeline.py  prompts.py
demo2skill/video/video2action/backends/: __init__.py  scripted.py  vlm.py
demo2skill/workflow/: __init__.py  schema.py  store.py  validator.py
docs/: architecture.md  video_demo_design.md
tests/: test_cursor_detect.py  test_event_logger.py  test_executor.py  test_export.py  test_field_text.py  test_frames.py  test_induction.py  test_ocr_fill.py  test_screen_parser.py  test_screen_parser_clients.py  test_screenvlm.py  test_stability.py  test_state_idm.py  test_statediff_cli.py  test_trace_normalize.py  test_video2action.py  test_workflow_schema.py
